--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine.cs" />
     <Compile Include="ParseIt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
