--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaseInsensitivity.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="IDataRow.cs" />
+    <Compile Include="JoinedRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlValue.cs" />
+    <Compile Include="TableRow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
