--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DataModel.cs" />
     <Compile Include="EquatableList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vars.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
