Implemented INSERT..SELECT

--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Evaluation\Eval.MergeStatement.cs" />
     <Compile Include="Evaluation\Eval.QueryExpression.cs" />
     <Compile Include="Evaluation\Eval.ScalarExpression.cs" />
+    <Compile Include="Evaluation\Eval.SelectInsertSource.cs" />
     <Compile Include="Evaluation\Eval.SelectStatement.cs" />
     <Compile Include="Evaluation\Eval.SetClauses.cs" />
     <Compile Include="Evaluation\Eval.SetVariable.cs" />
