--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -57,11 +57,12 @@
     <Compile Include="Evaluation\Eval.BooleanTernaryExpressionType.cs" />
     <Compile Include="Evaluation\Eval.CaseExpression.cs" />
     <Compile Include="Evaluation\Eval.CreateTableStatement.cs" />
+    <Compile Include="Evaluation\Eval.DataModificationSpecification.cs" />
     <Compile Include="Evaluation\Eval.DeclareVariable.cs" />
-    <Compile Include="Evaluation\Eval.DeleteStatement.cs" />
+    <Compile Include="Evaluation\Eval.DeleteSpecification.cs" />
     <Compile Include="Evaluation\Eval.DropObectsStatement.cs" />
     <Compile Include="Evaluation\Eval.IfStatement.cs" />
-    <Compile Include="Evaluation\Eval.InsertStatement.cs" />
+    <Compile Include="Evaluation\Eval.InsertSpecification.cs" />
     <Compile Include="Evaluation\Eval.MergeAction.cs" />
     <Compile Include="Evaluation\Eval.MergeStatement.cs" />
     <Compile Include="Evaluation\Eval.QueryExpression.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Evaluation\Eval.SetClauses.cs" />
     <Compile Include="Evaluation\Eval.SetVariable.cs" />
     <Compile Include="Evaluation\Eval.StatementList.cs" />
+    <Compile Include="Evaluation\Eval.TableReference.cs" />
     <Compile Include="Evaluation\Eval.TSqlStatement.cs" />
     <Compile Include="Evaluation\Eval.UnaryExpression.cs" />
     <Compile Include="Evaluation\Eval.UpdateStatement.cs" />
