Cleaned up AssemblyInfo

--- a/PocketSql.Tests/PocketSql.Tests.csproj
+++ b/PocketSql.Tests/PocketSql.Tests.csproj
@@ -47,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EvaluationTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -57,6 +56,9 @@
       <Project>{f9c39c16-d766-4c1d-85d3-37d2f9d4d752}</Project>
       <Name>PocketSql.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
