Added Cursor class

--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CaseInsensitivity.cs" />
+    <Compile Include="Cursor.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="DataModel.cs" />
