--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Function.cs" />
     <Compile Include="INamed.cs" />
     <Compile Include="Namespace.cs" />
+    <Compile Include="Naming.cs" />
     <Compile Include="Procedure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Env.cs" />
