Added msbuild command to travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ notifications:
 language: csharp
 mono: "5.4.0"
 script:
-  - echo "Csharp 7 not supported on travis"
+  - msbuild /p:Configuration=Release PocketSql.sln
