--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Evaluation\Eval.CreateTableStatement.cs" />
     <Compile Include="Evaluation\Eval.CreateViewStatement.cs" />
     <Compile Include="Evaluation\Eval.cs" />
+    <Compile Include="Evaluation\Eval.CursorStatement.cs" />
     <Compile Include="Evaluation\Eval.DataModificationSpecification.cs" />
+    <Compile Include="Evaluation\Eval.DeclareCursorStatement.cs" />
     <Compile Include="Evaluation\Eval.DeclareVariable.cs" />
     <Compile Include="Evaluation\Eval.DeleteSpecification.cs" />
     <Compile Include="Evaluation\Eval.DropObectsStatement.cs" />
