--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -41,10 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cursor.cs" />
-    <Compile Include="Database.cs" />
+    <Compile Include="Modeling\Cursor.cs" />
+    <Compile Include="Modeling\Database.cs" />
     <Compile Include="Engine.cs" />
-    <Compile Include="DataModel.cs" />
+    <Compile Include="Modeling\DataModel.cs" />
     <Compile Include="EngineCommand.cs" />
     <Compile Include="EngineConnection.cs" />
     <Compile Include="EngineDataReader.cs" />
@@ -53,7 +53,7 @@
     <Compile Include="EngineResult.cs" />
     <Compile Include="EngineTransaction.cs" />
     <Compile Include="Equality.cs" />
-    <Compile Include="EquatableList.cs" />
+    <Compile Include="Modeling\EquatableList.cs" />
     <Compile Include="Evaluation\Eval.AssignmentKind.cs" />
     <Compile Include="Evaluation\Eval.BinaryExpressionType.cs" />
     <Compile Include="Evaluation\Eval.BinaryQueryExpressionType.cs" />
@@ -97,20 +97,21 @@
     <Compile Include="Evaluation\Eval.WhileStatement.cs" />
     <Compile Include="Evaluation\Eval.TruncateTableStatement.cs" />
     <Compile Include="FeatureNotSupportedException.cs" />
-    <Compile Include="Function.cs" />
-    <Compile Include="INamed.cs" />
-    <Compile Include="Maybe.cs" />
-    <Compile Include="Namespace.cs" />
+    <Compile Include="Modeling\Function.cs" />
+    <Compile Include="Modeling\INamed.cs" />
+    <Compile Include="Modeling\Maybe.cs" />
+    <Compile Include="Modeling\Namespace.cs" />
     <Compile Include="Naming.cs" />
-    <Compile Include="Procedure.cs" />
+    <Compile Include="Modeling\Procedure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Env.cs" />
-    <Compile Include="Schema.cs" />
-    <Compile Include="View.cs" />
+    <Compile Include="Modeling\Schema.cs" />
+    <Compile Include="Modeling\View.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\.paket\paket.targets" />
   <Choose>
