--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -94,7 +94,6 @@
     <Compile Include="Modeling\Column.cs" />
     <Compile Include="Modeling\Cursor.cs" />
     <Compile Include="Modeling\Database.cs" />
-    <Compile Include="Modeling\DataModel.cs" />
     <Compile Include="Modeling\EquatableList.cs" />
     <Compile Include="Modeling\Function.cs" />
     <Compile Include="Modeling\IArgument.cs" />
@@ -110,6 +109,7 @@
     <Compile Include="Naming.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Env.cs" />
+    <Compile Include="Scope.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
@@ -121,6 +121,11 @@
       <ItemGroup>
         <Reference Include="Microsoft.SqlServer.TransactSql.ScriptDom">
           <HintPath>..\packages\Microsoft.SqlServer.TransactSql.ScriptDom\lib\net40\Microsoft.SqlServer.TransactSql.ScriptDom.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+        <Reference Include="System.Collections.Immutable">
+          <HintPath>..\packages\System.Collections.Immutable\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
