MERGE...UPDATE updates target row
MERGE...INSERT still has access to joined row
MERGE...DELETE should correctly remove row by reference equality

--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -95,7 +95,8 @@
     <Compile Include="Modeling\Column.cs" />
     <Compile Include="Modeling\Cursor.cs" />
     <Compile Include="Modeling\Database.cs" />
-    <Compile Include="Modeling\EquatableList.cs" />
+    <Compile Include="Modeling\EquatableArray.cs" />
+    <Compile Include="Modeling\EquatableAssociationList.cs" />
     <Compile Include="Modeling\Function.cs" />
     <Compile Include="Modeling\IArgument.cs" />
     <Compile Include="Modeling\INamed.cs" />
