--- a/PocketSql.Lib/packages.config
+++ b/PocketSql.Lib/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.SqlServer.TransactSql.ScriptDom" version="14.0.3811.1" targetFramework="net47" />
+  <package id="Microsoft.SqlServer.DacFx" version="150.4573.2" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
 </packages>
