--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 notifications:
   email: false
 language: csharp
-mono: "5.4.0"
-install:
-#  - nuget restore PocketSql.sln
-#  - nuget install NUnit.ConsoleRunner -Version 3.8.0 -OutputDirectory packages
 script:
-#  - msbuild /p:Configuration=Release PocketSql.sln
-#  - mono ./packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe ./PocketSql.Tests/bin/Release/PocketSql.Tests.dll
-  - echo "Csharp 7.2 not yet supported in Mono"
+  - dotnet build
+  - dotnet test
