--- a/PocketSql.Lib/PocketSql.Lib.csproj
+++ b/PocketSql.Lib/PocketSql.Lib.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <AssemblyName>PocketSql</AssemblyName>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>PocketSql</RootNamespace>
     <Description>T-SQL interpreter fit for testing</Description>
@@ -8,10 +9,20 @@
     <Authors>Robert Koeninger</Authors>
     <PackageId>PocketSql</PackageId>
     <Product>PocketSql</Product>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SqlServer.DacFx" Version="150.4573.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
