Moved sln under src/ and renamed PocketSql.Lib to just PocketSql

--- a/src/PocketSql.Tests/PocketSql.Tests.csproj
+++ b/src/PocketSql.Tests/PocketSql.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PocketSql.Lib\PocketSql.Lib.csproj" />
+    <ProjectReference Include="..\PocketSql\PocketSql.csproj" />
   </ItemGroup>
 
 </Project>
