Hid tests dotsettings in vs

--- a/src/PocketSql.Tests/PocketSql.Tests.csproj
+++ b/src/PocketSql.Tests/PocketSql.Tests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\PocketSql\PocketSql.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="PocketSql.Tests.csproj.DotSettings" Visible="false" />
+  </ItemGroup>
+
 </Project>
